--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -88,16 +88,17 @@
 
         <EditText
                 android:id="@+id/editText_email_content"
-                android:layout_width="375dp"
-                android:layout_height="294dp"
+                android:layout_width="400dp"
+                android:layout_height="258dp"
                 android:ems="10"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.454"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="0.459" />
+                app:layout_constraintVertical_bias="0.309" />
 
         <Button
                 android:id="@+id/button_email_send"
