--- a/app/src/main/res/layout/ceil.xml
+++ b/app/src/main/res/layout/ceil.xml
@@ -70,7 +70,7 @@
                 android:id="@+id/button_email_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button"
+                android:text="删除"
                 app:layout_constraintBottom_toBottomOf="@+id/button_email_look"
                 app:layout_constraintEnd_toStartOf="@+id/guideline4"
                 app:layout_constraintStart_toStartOf="@+id/guideline4"
