--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.692" />
+                app:layout_constraintVertical_bias="0.702" />
 
         <TextView
                 android:id="@+id/textView_email_theme"
@@ -62,10 +62,11 @@
 
         <EditText
                 android:id="@+id/editText_email_sender"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="217dp"
+                android:layout_height="44dp"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView_email_sender"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -88,15 +89,15 @@
 
         <EditText
                 android:id="@+id/editText_email_content"
-                android:layout_width="400dp"
+                android:layout_width="350dp"
                 android:layout_height="258dp"
                 android:ems="10"
                 android:gravity="start|top"
                 android:inputType="textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline9"
                 app:layout_constraintHorizontal_bias="0.454"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline8"
                 app:layout_constraintTop_toTopOf="@+id/guideline"
                 app:layout_constraintVertical_bias="0.309" />
 
@@ -116,5 +117,20 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layout_constraintGuide_percent="0.36" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.90" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
