--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -50,14 +50,27 @@
 
         <Button
                 android:id="@+id/personal_pop3"
-                android:layout_width="419dp"
-                android:layout_height="76dp"
+                android:layout_width="409dp"
+                android:layout_height="71dp"
                 android:text="@string/pop3"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.709" />
+                app:layout_constraintVertical_bias="0.66" />
+
+        <Button
+                android:id="@+id/button_information"
+                android:layout_width="414dp"
+                android:layout_height="65dp"
+                android:text="修改密码"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/personal_pop3"
+                app:layout_constraintVertical_bias="0.326" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
