--- a/app/src/main/res/layout/ceil.xml
+++ b/app/src/main/res/layout/ceil.xml
@@ -52,6 +52,7 @@
                 android:text="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline5"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
